--- a/link.html
+++ b/link.html
@@ -38,7 +38,7 @@
 <body class="mainbody">
 <div id="big-container">
 	<div class="lead-txt"><p>新宿2丁目の遊び場！クラブ、Bar、カフェなど系列店舗合同ウェブサイト | <a href="https://translate.google.com/translate?hl=en&sl=ja&tl=en&u=https://aliving.net">ENGLISH</a></p></div>
-	<div class="sns_icon"><a href="https://twitter.com/anniv_aliving" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a><a href="https://www.facebook.com/events/448058282221744/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a><a href="https://www.instagram.com/aisotope_lounge/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+  <div class="sns_icon"><a href="https://twitter.com/AiSOTOPE_LOUNGE" target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a><a href="https://www.facebook.com/AiSOTOPE.info/" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i></a><a href="https://www.instagram.com/aisotope_lounge/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
 
 <div id="header"></div>
 
@@ -86,15 +86,18 @@
 </div>
 
 <div id="alphabet_box" class="clearfix">
-<h2>GAY COMMUNITY</h2>
+<h2>LGBT COMMUNITY</h2>
 <p>
-<a target="_blank" href="http://www.2chopo.com/">2CHOPO</a>
+<a target="_blank" href="‪https://www.colorsjp.net‬">COLORS JAPAN</a>
 </p>
 <p>
 <a target="_blank" href="http://www.gclick.jp/">Gclick-ゲイのイエローページ-</a>
 </p>
 <p>
 <a target="_blank" href="http://gladxx.jp/">g-lad xx</a>
+</p>
+<p>
+<a target="_blank" href="http://genxy-net.com/">GENXY</a>
 </p>
 <p>
 <a target="_blank" href="http://www.ko-mens.tv/">KO-MENS.TV</a>
@@ -106,8 +109,6 @@
 <a target="_blank" href="http://www.badi.jp/">バディジェーピィ</a>
 </p>
 <p>
-<a target="_blank" href="http://lgc.chu.jp/">L GIRLS COLLECTION</a>
-</p>
 <p>
 <a target="_blank" href="http://ninemonsters.com/">9MONSTERS</a>
 </p>
@@ -176,9 +177,6 @@
 </p>
 <p>
 <a target="_blank" href="http://www.clubberia.com/">clubberia</a>
-</p>
-<p>
-<a target="_blank" href="http://genxy-net.com/">GENXY</a>
 </p>
 <p>
 <a target="_blank" href="http://iflyer.tv/jp/">iFLYER</a>
